[package]
name = "expense_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
